google-storage-buckets.yaml
apiVersion: v1
kind: Service
metadata:
  name: google-storage-buckets
  namespace: default
spec:
  externalName: storage.googleapis.com
  type: ExternalName
